# SSE

./: Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  TextLine.tsx  index.css  useStateRef.tsx
src/: main.rs
src/services/: sse.rs
