[package]
name = "sse-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug-assertions = true

[profile.release]
debug-assertions = false
opt-level = "s"

[dependencies]
color-eyre = "0.6.2"
futures-util = "0.3.30"
poem = { version = "2.0.0", features = ["sse", "static-files"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
